--- a/main.ipynb
+++ b/main.ipynb
@@ -368,20 +368,24 @@
    "source": [
     "# Date Readout Done\n",
     "\n",
-    "def date_done(a,b):\n",
+    "def date_done(a,b,c):\n",
     "    ans = b\n",
     "    if type(a) == datetime and type(b) == datetime:\n",
     "        if a != b:\n",
     "            ans = 'different to Date Scheduled'\n",
+    "    elif type(a) == datetime:       \n",
+    "        if (a <= datetime.today()) and (b == 'Empty date'):\n",
+    "            ans = 'Empty value' \n",
+    "    if  (c != 'F') and (b == 'Empty date'):\n",
+    "        ans = 'Empty value'\n",
     "    return ans\n",
     "\n",
     "date_red_don = ca[['Request ID', 'Date Scheduled', 'Date Readout Done', 'Status']].copy()\n",
     "date_red_don['Date Scheduled'] = format_date_column(date_red_don['Date Scheduled'])\n",
     "date_red_don['Date Readout Done'] = format_date_column(date_red_don['Date Readout Done'])\n",
     "date_red_don['Status'] = date_red_don['Status'].apply(first_character)\n",
-    "date_red_don = date_red_don[~((date_red_don['Date Readout Done'] == 'Empty date') & (date_red_don['Status'] == 'F'))]\n",
-    "date_red_don = date_red_don[~((date_red_don['Date Scheduled'] == 'Empty date') & (date_red_don['Date Readout Done'] == 'Empty date'))]\n",
-    "date_red_don['Date Readout Done'] = date_red_don[['Date Scheduled','Date Readout Done','Status']].apply(lambda x: date_done(x[0],x[1]), axis=1)\n",
+    "date_red_don['Date Readout Done'] = date_red_don[['Date Scheduled','Date Readout Done','Status']].apply(lambda x: date_done(x[0],x[1],x[2]), axis=1)\n",
+    "date_red_don = date_red_don[~(date_red_don['Date Readout Done'] == 'Empty date')]\n",
     "date_red_don = date_red_don[~(date_red_don['Date Readout Done'].apply(type) == datetime)]\n",
     "date_red_don.drop(axis=1, columns=['Date Scheduled','Status'],inplace=True)"
    ]
@@ -435,18 +439,27 @@
    "source": [
     "# Delivery Type\n",
     "\n",
-    "del_type = ca[['Request ID', 'Date Readout Done', 'Delivery Type']].copy()\n",
+    "def delivery_type(col1,col2,col3,col4):\n",
+    "    ans = col4\n",
+    "    if col2 == 'B_PAR_Creation' and col3 == 'B_Unqualified - duplicated':\n",
+    "        if col4 != 'Not presented':\n",
+    "            ans = 'should be: Not presented'\n",
+    "    if type(col1) == datetime:\n",
+    "        if col1 > datetime.today():\n",
+    "            if col4 != 'Pending':\n",
+    "               ans = 'should be: Pending'\n",
+    "    if pd.isna(col4) == True:\n",
+    "        ans = 'Empty value'\n",
     "\n",
-    "for id, row in del_type.iterrows():\n",
-    "    if pd.isnull(row['Delivery Type']) == True:\n",
-    "        del_type.loc[[id], ['Delivery Type']] = 'Empty value'\n",
-    "    elif pd.isna(row['Date Readout Done']) == True and row['Delivery Type'] != 'Not presented':\n",
-    "        del_type.loc[[id], ['Delivery Type']] = 'should be: Not Presented'\n",
-    "    else:\n",
-    "        del_type.loc[[id], ['Delivery Type']] = None\n",
+    "    return ans\n",
     "\n",
-    "del_type.dropna(axis=0, subset=['Delivery Type'], inplace=True)\n",
-    "del_type.drop(axis=1, columns=['Date Readout Done'], inplace=True)    "
+    "del_type = ca[['Request ID', 'Date Readout Done','Account Stage', 'Status', 'Delivery Type']].copy()\n",
+    "del_type['Date Readout Done'] = format_date_column(del_type['Date Readout Done'])\n",
+    "del_type['Delivery Type'] = del_type[['Date Readout Done','Account Stage', 'Status', 'Delivery Type']].apply(lambda i: delivery_type(i[0],i[1],i[2],i[3]), axis=1)\n",
+    "del_type = del_type[(del_type['Delivery Type'] == 'should be: Not presented') |\n",
+    "                    (del_type['Delivery Type'] == 'should be: Pending') |\n",
+    "                    (del_type['Delivery Type'] == 'Empty value')]\n",
+    "del_type = del_type[['Request ID','Delivery Type']]"
    ]
   },
   {
@@ -541,6 +554,21 @@
     "\n",
     "oppty.dropna(axis=0, how='all', subset=['Miss Attach Opportunity', 'Expired Opportunity', 'LDoS Opportunity'], inplace=True)\n",
     "oppty.drop(axis=1, columns=['Account Stage'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#next step\n",
+    "\n",
+    "n_steps= ca[['Request ID', 'Account Stage', 'Status', 'Next steps']].copy()\n",
+    "n_steps = n_steps[(n_steps['Account Stage'] == 'B_PAR_Creation') & (n_steps['Status'] == 'B_Unqualified - duplicated')]\n",
+    "n_steps = n_steps[pd.isna(n_steps['Next steps'])]\n",
+    "n_steps['Next steps'] = 'Empty value'\n",
+    "n_steps = n_steps[['Request ID','Next steps']]"
    ]
   },
   {
@@ -670,31 +698,26 @@
    "outputs": [],
    "source": [
     "# Closing Date\n",
-    "def close_date(colm1,colm2,colm3,colm4):\n",
-    "    ans = colm4\n",
-    "    if type(colm1) == datetime and type(colm4) == datetime: \n",
-    "        if colm1 > colm4:\n",
+    "def close_date(colm1,colm3):\n",
+    "    ans = colm3\n",
+    "    if type(colm1) == Timestamp and type(colm3) == datetime: \n",
+    "        if colm1 > colm3:\n",
     "            ans = 'date is older than Date Received'\n",
-    "    elif colm4 == 'Empty date':\n",
-    "        if pd.isna(colm2) == False:\n",
-    "            if colm2[5] != 'H' and colm2[2] != 'S' and colm2[2] != 'R' and colm2[4] != 'r':\n",
-    "                if colm2[2] == 'D' or colm2[2] == 'U' or (colm2[2] == 'O' and colm2[14] == 'L'):\n",
-    "                    ans = 'Empty value'\n",
-    "        if pd.notna(colm3) == True:\n",
-    "            if colm3 <= datetime.today():\n",
-    "                ans = 'Empty value'\n",
-    "            else:\n",
-    "                ans = 'Empty value'\n",
+    "    if colm3 == 'Empty date':\n",
+    "        ans = 'Empty value'\n",
     "    return ans\n",
     "\n",
     "\n",
-    "closig_dat = ca[['Request ID', 'Date received','Status', 'Date Follow Up 3', 'Closed Date']].copy()\n",
-    "closig_dat['Closed Date'] = format_date_column(closig_dat['Closed Date'])\n",
+    "closig_dat = ca[['Request ID', 'Date received', 'Reason Declined','Reason Declined Lvl 2','Account Stage', 'Status', 'Date Follow Up 3', 'Closed Date']].copy()\n",
+    "closig_dat = closig_dat[~(((pd.notna(closig_dat['Reason Declined'])) | (pd.notna(closig_dat['Reason Declined Lvl 2']))) & (pd.isna(closig_dat['Closed Date'])))]\n",
+    "closig_dat = closig_dat[(closig_dat['Account Stage'] == 'B_PAR_Creation') & (closig_dat['Status'] == 'B_Unqualified - duplicated')]\n",
+    "closig_dat = closig_dat[~((pd.notna(closig_dat['Reason Declined'])) | (pd.notna(closig_dat['Reason Declined Lvl 2'])))]\n",
     "closig_dat['Date received'] = format_date_column(closig_dat['Date received'])\n",
-    "closig_dat['Closed Date'] = closig_dat[['Date received','Status', 'Date Follow Up 3', 'Closed Date']].apply(lambda row: close_date(row[0],row[1],row[2],row[3]), axis=1)\n",
+    "closig_dat['Closed Date'] = format_date_column(closig_dat['Closed Date'])\n",
+    "closig_dat['Closed Date'] = closig_dat[['Date received', 'Closed Date']].apply(lambda row: close_date(row[0],row[1]), axis=1)\n",
     "closig_dat = closig_dat[~(closig_dat['Closed Date'] == 'Empty date')]\n",
-    "closig_dat = closig_dat[closig_dat['Closed Date'].apply(type) != datetime]\n",
-    "closig_dat.drop(axis=1, columns=['Date received','Status', 'Date Follow Up 3'], inplace=True)"
+    "closig_dat = closig_dat[closig_dat['Closed Date'].apply(type) == str]\n",
+    "closig_dat.drop(axis=1, columns=['Date received','Reason Declined','Reason Declined Lvl 2','Account Stage','Status', 'Date Follow Up 3'], inplace=True)\n"
    ]
   },
   {
@@ -730,6 +753,7 @@
     "            reason_decl2, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            reas_hold, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            oppty, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            n_steps, how='outer', left_on='Request ID', right_on='Request ID').merge(   \n",
     "            follow1, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            follow2, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            follow3, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
@@ -856,6 +880,16 @@
    "outputs": [],
    "source": [
     "outlServer.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('nub78.txt', 'r') as i:\n",
+    "    print(i.read()) "
    ]
   }
  ],
