--- a/Main.ipynb
+++ b/Main.ipynb
@@ -889,7 +889,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('nub78.txt', 'r') as i:\n",
+    "    print(i.read()) "
+   ]
   }
  ],
  "metadata": {
