--- a/main.ipynb
+++ b/main.ipynb
@@ -242,8 +242,11 @@
     "d_f_contact['Date First Contact'] = format_date_column(d_f_contact['Date First Contact'])\n",
     "d_f_contact = d_f_contact[~((d_f_contact['Date received'] == 'Empty date') & (d_f_contact['Date First Contact'] == 'Empty date'))]\n",
     "d_f_contact = d_f_contact[~((d_f_contact['Date received'] == 'Empty date') | (d_f_contact['Date First Contact'] == 'Empty date'))]\n",
+    "format_errors = d_f_contact[d_f_contact['Date First Contact'].apply(type) == str]\n",
+    "d_f_contact = d_f_contact[~(d_f_contact['Date First Contact'].apply(type) == str)]\n",
     "d_f_contact = d_f_contact[d_f_contact['Date received'] > d_f_contact['Date First Contact']]\n",
     "d_f_contact['Date First Contact'] = 'date older that Date received'\n",
+    "d_f_contact = pd.concat([d_f_contact, format_errors])\n",
     "d_f_contact.drop(axis=1, columns=['Date received'], inplace=True)"
    ]
   },
@@ -334,6 +337,7 @@
     "date_init_s['Date First Contact'] = format_date_column(date_init_s['Date First Contact'])\n",
     "date_init_s = date_init_s[~((date_init_s['Date First Contact'] == 'Empty date') & (date_init_s['Date Invite Sent'] == 'Empty date'))]\n",
     "date_init_s = date_init_s[~((date_init_s['Date First Contact'] == 'Empty date') | (date_init_s['Date Invite Sent'] == 'Empty date'))]\n",
+    "date_init_s = date_init_s[~(date_init_s['Date First Contact'] == 'Format Error')]\n",
     "format_errors = date_init_s[date_init_s['Date Invite Sent'] == 'Format Error']\n",
     "date_init_s = date_init_s[~(date_init_s['Date Invite Sent'] == 'Format Error')]\n",
     "date_init_s = date_init_s[date_init_s['Date First Contact'] > date_init_s['Date Invite Sent']]\n",
@@ -895,7 +899,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "59a5cf5afc9bb8dd5c0b7c811dd61d424d750a3d732b2b54623aa1d472071de7"
+   "hash": "87e43e869ebd2c3b1150c2f8834dddb6350409738d96eb8dc26b716e47c2cdf7"
   },
   "kernelspec": {
    "display_name": "Python 3.9.7 ('base')",
@@ -912,7 +916,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
