modified filters that use datetime type

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -154,11 +154,11 @@
     "dat_rdone.drop(axis=0, labels=dat_rdone[(dat_rdone['Date Advisor Assigned'] == 'Empty date') & (dat_rdone['Date Readout Done'].apply(type) != str)].index, inplace=True)\n",
     "\n",
     "for id, row in dat_rdone.iterrows():\n",
-    "    if type(row['Date Readout Done']) == datetime and type(row['Date Advisor Assigned']) == datetime:\n",
+    "    if type(row['Date Readout Done']) in [datetime, Timestamp] and type(row['Date Advisor Assigned']) in [datetime, Timestamp]:\n",
     "        if row['Date Advisor Assigned'] > row['Date Readout Done']:\n",
     "            dat_rdone.loc[id, 'Date Readout Done'] = 'Date Advisor Assigned greater'\n",
     "            \n",
-    "dat_rdone.drop(axis=0, labels=dat_rdone[dat_rdone['Date Readout Done'].apply(type) == datetime].index, inplace=True)\n",
+    "dat_rdone.drop(axis=0, labels=dat_rdone[~(dat_rdone['Date Readout Done'].apply(type) == str)].index, inplace=True)\n",
     "dat_rdone.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)"
    ]
   },
@@ -172,7 +172,7 @@
     "\n",
     "del_status = df_compass[['Request ID', 'Date Readout Done', 'Readout Delivery Status']].copy()\n",
     "del_status['Date Readout Done'] = format_date_column(del_status['Date Readout Done'])\n",
-    "del_status = del_status[del_status['Date Readout Done'].apply(type) == datetime]\n",
+    "del_status = del_status[del_status['Date Readout Done'].apply(type).isin([datetime, Timestamp])]\n",
     "del_status = del_status[del_status['Date Readout Done'] < datetime.today()]\n",
     "del_status = del_status[pd.isna(del_status['Readout Delivery Status'])]\n",
     "del_status['Readout Delivery Status'] = 'Empty value'\n",
@@ -231,11 +231,11 @@
     "pre_created.drop(axis=0, labels=pre_created[(pre_created['Date Advisor Assigned'] == 'Empty date') & (pre_created['Date Presentation Created'].apply(type) != str)].index, inplace=True)\n",
     "\n",
     "for id, row in pre_created.iterrows():\n",
-    "    if type(row['Date Presentation Created']) == datetime and type(row['Date Advisor Assigned']) == datetime:\n",
+    "    if type(row['Date Presentation Created']) in [datetime, Timestamp] and type(row['Date Advisor Assigned']) in [datetime, Timestamp]:\n",
     "        if row['Date Advisor Assigned'] > row['Date Presentation Created']:\n",
     "            pre_created.loc[id, 'Date Presentation Created'] = 'Date Advisor Assigned greater'\n",
     "\n",
-    "pre_created.drop(axis=0, labels=pre_created[pre_created['Date Presentation Created'].apply(type) == datetime].index, inplace=True)\n",
+    "pre_created.drop(axis=0, labels=pre_created[pre_created['Date Presentation Created'].apply(type).isin([datetime, Timestamp])].index, inplace=True)\n",
     "pre_created.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)"
    ]
   },
@@ -286,14 +286,14 @@
     "                           (dat_invite_s['Readout Delivery Status'] == 'Emailed Recommendations')\n",
     "                           ]\n",
     "\n",
-    "dat_invite_s = dat_invite_s[(dat_invite_s['Date Advisor Assigned'].apply(type) == datetime) & (dat_invite_s['Date Invite Sent'].apply(type) == datetime)]\n",
+    "dat_invite_s = dat_invite_s[(dat_invite_s['Date Advisor Assigned'].apply(type).isin([datetime, Timestamp])) & (dat_invite_s['Date Invite Sent'].apply(type).isin([datetime, Timestamp]))]\n",
     "\n",
     "for id, row in dat_invite_s.iterrows():\n",
-    "    if type(row['Date Advisor Assigned']) == datetime and type(row['Date Invite Sent']) == datetime:\n",
+    "    if type(row['Date Advisor Assigned']) in [datetime, Timestamp] and type(row['Date Invite Sent']) in [datetime, Timestamp]:\n",
     "        if row['Date Advisor Assigned'] > row['Date Invite Sent']:\n",
     "            dat_invite_s.loc[id, 'Date Invite Sent'] = 'Date Advisor Assigned is greater'\n",
     "\n",
-    "dat_invite_s.drop(axis=0, labels=dat_invite_s[dat_invite_s['Date Invite Sent'].apply(type) == datetime].index, inplace=True)\n",
+    "dat_invite_s.drop(axis=0, labels=dat_invite_s[dat_invite_s['Date Invite Sent'].apply(type).isin([datetime, Timestamp])].index, inplace=True)\n",
     "dat_invite_s.drop(axis=1, columns=['Date Advisor Assigned','Readout Delivery Status'], inplace=True)"
    ]
   },
@@ -316,14 +316,14 @@
     "                           (dat_sum_sent['Readout Delivery Status'] == 'Emailed Recommendations')\n",
     "                           ]\n",
     "\n",
-    "dat_sum_sent = dat_sum_sent[(dat_sum_sent['Date Readout Done'].apply(type) == datetime) & (dat_sum_sent['Date Summary Sent'].apply(type) == datetime)]\n",
+    "dat_sum_sent = dat_sum_sent[(dat_sum_sent['Date Readout Done'].apply(type).isin([datetime, Timestamp])) & (dat_sum_sent['Date Summary Sent'].apply(type).isin([datetime, Timestamp]))]\n",
     "\n",
     "for id, row in dat_sum_sent.iterrows():\n",
     "    if type(row['Date Summary Sent']) == datetime and type(row['Date Readout Done']) == datetime:\n",
     "        if row['Date Readout Done'] > row['Date Summary Sent']:\n",
     "            dat_sum_sent.loc[id, 'Date Summary Sent'] = 'Date Readout is greater'\n",
     "\n",
-    "dat_sum_sent.drop(axis=0, labels=dat_sum_sent[dat_sum_sent['Date Summary Sent'].apply(type) == datetime].index, inplace=True)\n",
+    "dat_sum_sent.drop(axis=0, labels=dat_sum_sent[dat_sum_sent['Date Summary Sent'].apply(type).isin([datetime, Timestamp])].index, inplace=True)\n",
     "dat_sum_sent.drop(axis=1, columns=['Readout Delivery Status','Date Readout Done'], inplace=True)"
    ]
   },
@@ -608,14 +608,14 @@
     "                    (clos_date['Readout Delivery Status'] == 'Declined')\n",
     "                    ]\n",
     "\n",
-    "clos_date = clos_date[(clos_date['Date Readout Done'].apply(type) == datetime) & (clos_date['Closing Date'].apply(type) == datetime)]\n",
+    "clos_date = clos_date[(clos_date['Date Readout Done'].apply(type).isin([datetime, Timestamp])) & (clos_date['Closing Date'].apply(type).isin([datetime, Timestamp]))]\n",
     "\n",
     "for id, row in clos_date.iterrows():\n",
-    "    if type(row['Closing Date']) == datetime and type(row['Date Readout Done']) == datetime:\n",
+    "    if type(row['Closing Date']) in [datetime, Timestamp] and type(row['Date Readout Done']) in [datetime, Timestamp]:\n",
     "        if row['Date Readout Done'] > row['Closing Date']:\n",
     "            clos_date.loc[id, 'Closing Date'] = 'Date Readout is greater'\n",
     "\n",
-    "clos_date.drop(axis=0, labels=clos_date[clos_date['Closing Date'].apply(type) == datetime].index, inplace=True)\n",
+    "clos_date.drop(axis=0, labels=clos_date[clos_date['Closing Date'].apply(type).isin([datetime, Timestamp])].index, inplace=True)\n",
     "clos_date.drop(axis=1, columns=['Readout Delivery Status','Date Readout Done'], inplace=True)"
    ]
   },
