Column name modified from 'Account' to 'Account Name'

--- a/main.ipynb
+++ b/main.ipynb
@@ -45,8 +45,8 @@
     "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Coverage%20Advisor%20Tracker%20OFICIAL.xlsx\"\\\n",
     "    ,filename = 'Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx', sheet_name='COE Reports')\n",
-    "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
-    "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)\n",
+    "ca.dropna(axis=0, subset=['Account Name'], inplace=True)\n",
+    "ca.drop(list(ca[ca['Account Name']==0].index), axis=0, inplace=True)\n",
     "ca.dropna(axis=0, subset=['Request ID'], inplace=True)\n",
     "ca.drop_duplicates(subset=['Request ID'], inplace=True)"
    ]
@@ -773,7 +773,7 @@
    "source": [
     "new_table.dropna(axis=0, how='all', subset=new_table.columns[2:], inplace=True)  \n",
     "t_names = pd.DataFrame()\n",
-    "t_names[['Request ID','Name','Account']] = ca[['Request ID','Coverage Advisor','Account']]\n",
+    "t_names[['Request ID','Name','Account Name']] = ca[['Request ID','Coverage Advisor','Account Name']]\n",
     "new_table = t_names.merge(new_table, how='right', left_on='Request ID', right_on='Request ID')"
    ]
   },
