--- a/main.ipynb
+++ b/main.ipynb
@@ -714,7 +714,7 @@
     "\n",
     "closig_dat = ca[['Request ID', 'Date received', 'Reason Declined','Reason Declined Lvl 2','Account Stage', 'Status', 'Date Follow Up 3', 'Closed Date']].copy()\n",
     "closig_dat = closig_dat[~(((pd.notna(closig_dat['Reason Declined'])) | (pd.notna(closig_dat['Reason Declined Lvl 2']))) & (pd.isna(closig_dat['Closed Date'])))]\n",
-    "closig_dat = closig_dat[(closig_dat['Account Stage'] == 'B_PAR_Creation') & (closig_dat['Status'] == 'B_Unqualified - duplicated')]\n",
+    "closig_dat = closig_dat[(closig_dat['Account Stage'] == 'B_PAR_Creation') & (closig_dat['Status'] == 'B_Unqualified-duplicated')]\n",
     "closig_dat = closig_dat[~((pd.notna(closig_dat['Reason Declined'])) | (pd.notna(closig_dat['Reason Declined Lvl 2'])))]\n",
     "closig_dat['Date received'] = format_date_column(closig_dat['Date received'])\n",
     "closig_dat['Closed Date'] = format_date_column(closig_dat['Closed Date'])\n",
@@ -895,6 +895,13 @@
     "with open('nub78.txt', 'r') as i:\n",
     "    print(i.read()) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
