--- a/main.ipynb
+++ b/main.ipynb
@@ -281,6 +281,7 @@
     "dat_nalys['PAR Received'] = format_date_column(dat_nalys['PAR Received'])\n",
     "dat_nalys = dat_nalys[~((dat_nalys['PAR Received'] == 'Empty date') & (dat_nalys['Date Analysis'] == 'Empty date'))]\n",
     "dat_nalys = dat_nalys[~((dat_nalys['PAR Received'] == 'Empty date') | (dat_nalys['Date Analysis'] == 'Empty date'))]\n",
+    "dat_nalys = dat_nalys[~(dat_nalys['PAR Received'] == 'Format Error')]\n",
     "dat_nalys = dat_nalys[dat_nalys['PAR Received'] > dat_nalys['Date Analysis']]\n",
     "dat_nalys['Date Analysis'] = 'date older that PAR Received'\n",
     "dat_nalys.drop(axis=1, columns=['PAR Received'], inplace=True)"
@@ -315,8 +316,9 @@
     "    ans = a\n",
     "    if pd.isna(a) and b == 'F':\n",
     "        ans = 'Empty value'\n",
-    "    if a > 180:\n",
-    "        ans = 'value above 180'\n",
+    "    if type(a) == int:\n",
+    "        if a > 180:\n",
+    "            ans = 'value above 180'\n",
     "    return ans\n",
     "\n",
     "pre_reffor['Pre-Readout Effort (min)'] = pre_reffor[['Pre-Readout Effort (min)','A']].apply(lambda x: pre_effort(x[0],x[1]), axis=1)\n",
@@ -358,9 +360,11 @@
     "date_sche['Date Invite Sent'] = format_date_column(date_sche['Date Invite Sent'])\n",
     "date_sche['Date Scheduled'] = format_date_column(date_sche['Date Scheduled'])\n",
     "date_sche['Date Readout Done'] = format_date_column(date_sche['Date Readout Done'])\n",
-    "date_sche = date_sche[~((date_sche['Date Invite Sent'] == 'Empty date') | (date_sche['Date Scheduled'] == 'Empty date') | (date_sche['Date Readout Done'] == 'Empty date'))]\n",
+    "format_errors = date_sche[date_sche['Date Scheduled'] == 'Format Error']\n",
+    "date_sche = date_sche[~((date_sche['Date Invite Sent'] == 'Empty date') | (date_sche['Date Scheduled'] == 'Empty date') | (date_sche['Date Readout Done'] == 'Empty date') | (date_sche['Date Scheduled'] == 'Format Error'))]\n",
     "date_sche = date_sche[~((date_sche['Date Scheduled'] >= date_sche['Date Invite Sent']) & (date_sche['Date Scheduled'] == date_sche['Date Readout Done']))]\n",
     "date_sche['Date Scheduled'] = 'Relation error with Date Invite Sent or Date Readout Done'\n",
+    "date_sche = pd.concat([date_sche,format_errors],axis=0)\n",
     "date_sche.drop(axis=1, columns=['Date Invite Sent','Date Readout Done'], inplace=True)"
    ]
   },
@@ -718,7 +722,12 @@
     "closig_dat = closig_dat[~((pd.notna(closig_dat['Reason Declined'])) | (pd.notna(closig_dat['Reason Declined Lvl 2'])))]\n",
     "closig_dat['Date received'] = format_date_column(closig_dat['Date received'])\n",
     "closig_dat['Closed Date'] = format_date_column(closig_dat['Closed Date'])\n",
-    "closig_dat['Closed Date'] = closig_dat[['Date received', 'Closed Date']].apply(lambda row: close_date(row[0],row[1]), axis=1)\n",
+    "\n",
+    "try:\n",
+    "    closig_dat['Closed Date'] = closig_dat[['Date received', 'Closed Date']].apply(lambda row: close_date(row[0],row[1]), axis=1)\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
     "closig_dat = closig_dat[~(closig_dat['Closed Date'] == 'Empty date')]\n",
     "closig_dat = closig_dat[closig_dat['Closed Date'].apply(type) == str]\n",
     "closig_dat.drop(axis=1, columns=['Date received','Reason Declined','Reason Declined Lvl 2','Account Stage','Status', 'Date Follow Up 3'], inplace=True)\n"
@@ -844,15 +853,16 @@
    "outputs": [],
    "source": [
     "for i, sheet in mail_table.iterrows():\n",
-    "    if pd.isnull(sheet['Email']) == False:\n",
-    "        df_sent = new_table[new_table['Name'] == sheet['Name']]\n",
-    "        df_sent.to_excel('error_report_%s.xlsx' % today, index=False)    \n",
-    "        excel_formating.format_excel()\n",
-    "        if df_sent.shape[0] > 0:\n",
-    "            send_msg(sheet['Email'], myMail, subjectEmail , msg1 % sheet['Name'], True)\n",
-    "            print(sheet['Email'])\n",
-    "        else:\n",
-    "            print('Not send to: '+sheet['Email'])"
+    "    #if i >= 14:\n",
+    "        if pd.isnull(sheet['Email']) == False:\n",
+    "            df_sent = new_table[new_table['Name'] == sheet['Name']]\n",
+    "            df_sent.to_excel('error_report_%s.xlsx' % today, index=False)    \n",
+    "            excel_formating.format_excel()\n",
+    "            if df_sent.shape[0] > 0:\n",
+    "                send_msg(sheet['Email'], myMail, subjectEmail , msg1 % sheet['Name'], True)\n",
+    "                print(sheet['Email'])\n",
+    "            else:\n",
+    "                print('Not send to: '+sheet['Email'])"
    ]
   },
   {
@@ -895,13 +905,6 @@
     "with open('nub78.txt', 'r') as i:\n",
     "    print(i.read()) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
