--- a/Main.ipynb
+++ b/Main.ipynb
@@ -764,15 +764,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_report"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -789,7 +780,7 @@
     "\n",
     "send_names = compass_names.merge(compass_mails, how='right', left_on='Name', right_on='Advisor Name')\n",
     "send_names.drop_duplicates('Name', inplace=True)\n",
-    "send_names"
+    "send_names = send_names.reset_index(drop='True')"
    ]
   },
   {
@@ -842,17 +833,18 @@
    "source": [
     "for i, colm in send_names.iterrows():\n",
     "    if pd.isna(colm['Mail']) == False:\n",
-    "        df_sent = final_report[final_report['Mail Cisco'] == colm['Mail Cisco']]\n",
-    "        df_sent.to_excel('compass_error_report_%s.xlsx' % today, index=False)\n",
-    "        format_report.format_excel()\n",
-    "        if df_sent.shape[0] > 0:\n",
-    "            send_msg(colm['Mail'], myMail, subjectEmail , msg1 % colm['Advisor Name'], True)\n",
-    "            print(colm['Mail'])\n",
-    "            #Temporal\n",
-    "            if colm['Name'] == 'Miguel Mora' or colm['Name'] == 'Lina Hernández':\n",
-    "                send_msg('luisa.molano@nub78.com', myMail, subjectEmail , msg1 % 'Luisa', True)\n",
-    "        else:\n",
-    "            print('Not send to: '+colm['Mail'])"
+    "        if i > 4:\n",
+    "            df_sent = final_report[final_report['Mail Cisco'] == colm['Mail Cisco']]\n",
+    "            df_sent.to_excel('compass_error_report_%s.xlsx' % today, index=False)\n",
+    "            format_report.format_excel()\n",
+    "            if df_sent.shape[0] > 0:\n",
+    "                send_msg(colm['Mail'], myMail, subjectEmail , msg1 % colm['Advisor Name'], True)\n",
+    "                print(colm['Mail'])\n",
+    "                #Temporal\n",
+    "                if colm['Name'] == 'Miguel Mora' or colm['Name'] == 'Lina Hernández':\n",
+    "                    send_msg('luisa.molano@nub78.com', myMail, subjectEmail , msg1 % 'Luisa', True)\n",
+    "            else:\n",
+    "                print('Not send to: '+colm['Mail'])"
    ]
   },
   {
@@ -893,6 +885,13 @@
     "with open('nub78.txt', 'r') as i:\n",
     "    print(i.read()) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
