--- a/Main.ipynb
+++ b/Main.ipynb
@@ -67,8 +67,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#https://nubsieteocho.sharepoint.com/:x:/s/ODAOPS/ERXaAj-rk8RAiCYd9i8d9i8BFcGFPdiJzndABJAqwtcCmw?e=lezA4e\n",
+    "\n",
     "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Daily%20CAB%20Tracker.xlsx\",\n",
-    "              filename='Daily CAB Tracker.xlsx')\n",
+    "              filename='Daily CAB Tracker.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "df_compass = pd.read_excel('Daily CAB Tracker.xlsx', sheet_name='Tracker', keep_default_na=False, \n",
     "            na_values=['-1.#IND', '1.#QNAN', '1.#IND', '-1.#QNAN', '#N/A N/A', '#N/A', '', '#NA', 'NULL', 'null', 'NaN', '-NaN', 'nan', '-nan', ' '])\n",
     "df_compass.dropna(axis=0, how='all', subset=['Request ID', 'Customer Name'], inplace=True)\n",
@@ -833,18 +844,18 @@
    "source": [
     "for i, colm in send_names.iterrows():\n",
     "    if pd.isna(colm['Mail']) == False:\n",
-    "        if i > 4:\n",
-    "            df_sent = final_report[final_report['Mail Cisco'] == colm['Mail Cisco']]\n",
-    "            df_sent.to_excel('compass_error_report_%s.xlsx' % today, index=False)\n",
-    "            format_report.format_excel()\n",
-    "            if df_sent.shape[0] > 0:\n",
-    "                send_msg(colm['Mail'], myMail, subjectEmail , msg1 % colm['Advisor Name'], True)\n",
-    "                print(colm['Mail'])\n",
-    "                #Temporal\n",
-    "                if colm['Name'] == 'Miguel Mora' or colm['Name'] == 'Lina Hernández':\n",
-    "                    send_msg('luisa.molano@nub78.com', myMail, subjectEmail , msg1 % 'Luisa', True)\n",
-    "            else:\n",
-    "                print('Not send to: '+colm['Mail'])"
+    "        #if i <= 4:\n",
+    "        df_sent = final_report[final_report['Mail Cisco'] == colm['Mail Cisco']]\n",
+    "        df_sent.to_excel('compass_error_report_%s.xlsx' % today, index=False)\n",
+    "        format_report.format_excel()\n",
+    "        if df_sent.shape[0] > 0:\n",
+    "            send_msg(colm['Mail'], myMail, subjectEmail , msg1 % colm['Advisor Name'], True)\n",
+    "            print(colm['Mail'])\n",
+    "            #Temporal\n",
+    "            if colm['Name'] == 'Miguel Mora' or colm['Name'] == 'Lina Hernández':\n",
+    "                send_msg('luisa.molano@nub78.com', myMail, subjectEmail , msg1 % 'Luisa', True)\n",
+    "        else:\n",
+    "            print('Not send to: '+colm['Mail'])"
    ]
   },
   {
