--- a/Main.ipynb
+++ b/Main.ipynb
@@ -864,7 +864,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_report.to_excel('compass_error_report_%s.xlsx' % today, index=False)\n",
+    "final_report.to_excel(r\"./reports/compass_error_report_%s.xlsx\" % today, index=False)\n",
     "format_report.format_excel()"
    ]
   },
