--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
     "#System variables\n",
     "MAIL_NUB = os.environ.get('MAIL_NUB')\n",
     "PASS_MAIL_NUB = os.environ.get('PASS_MAIL_NUB')\n",
-    "s = sharepy.connect(\"nubsieteocho.sharepoint.com\", MAIL_NUB, PASS_MAIL_NUB)"
+    "s = sharepy.connect(\"sharepoint url\", MAIL_NUB, PASS_MAIL_NUB)"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "#import data with the users mails\n",
-    "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Coverage%20Advisor%20Tracker%20OFICIAL.xlsx\"\\\n",
+    "p = s.getfile(\"file url\"\\\n",
     "    ,filename = 'Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx', sheet_name='COE Reports')\n",
     "ca.dropna(axis=0, subset=['Account Name'], inplace=True)\n",
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/coverage_mails.xlsx\"\\\n",
+    "m = s.getfile(\"file url\"\\\n",
     "    ,filename = 'coverage_mails.xlsx')\n",
     "mail = pd.read_excel('coverage_mails.xlsx')"
    ]
@@ -70,8 +70,8 @@
    "source": [
     "#SMTP Mail variables\n",
     "today = datetime.strftime(datetime.today(), '%m-%d-%Y')\n",
-    "myMail = 'testNub78@outlook.com'\n",
-    "password = 'EasyP4ssword78'\n",
+    "myMail = 'username'\n",
+    "password = 'password'\n",
     "subjectEmail = 'Coverage error report'\n",
     "\n",
     "msg1 = \"\"\"<h3>Hola, %s</h3>\n",
@@ -883,8 +883,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "send_msg('jonnathan.neira@nub78.com', myMail, subjectEmail , msg1 % 'Jonnathan', True)\n",
-    "send_msg('maria.rojas@nub78.com', myMail, subjectEmail , msg1 % 'Maria', True)"
+    "send_msg('main mail', myMail, subjectEmail , msg1 % 'Jonnathan', True)\n",
+    "send_msg('test mail', myMail, subjectEmail , msg1 % 'Maria', True)"
    ]
   },
   {
@@ -908,11 +908,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "87e43e869ebd2c3b1150c2f8834dddb6350409738d96eb8dc26b716e47c2cdf7"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -926,9 +923,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "7627003e78ead900aec203b185a978fc27a38ee0366c28a11b079a9dcc3d571a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
