--- a/Main.ipynb
+++ b/Main.ipynb
@@ -12,7 +12,7 @@
     "#System variables\n",
     "MAIL_NUB = os.environ.get('MAIL_NUB')\n",
     "PASS_MAIL_NUB = os.environ.get('PASS_MAIL_NUB')\n",
-    "s = sharepy.connect(\"nubsieteocho.sharepoint.com\", MAIL_NUB, PASS_MAIL_NUB)"
+    "s = sharepy.connect(\"sharepoint url\", MAIL_NUB, PASS_MAIL_NUB)"
    ]
   },
   {
@@ -67,9 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://nubsieteocho.sharepoint.com/:x:/s/ODAOPS/ERXaAj-rk8RAiCYd9i8d9i8BFcGFPdiJzndABJAqwtcCmw?e=lezA4e\n",
-    "\n",
-    "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Daily%20CAB%20Tracker.xlsx\",\n",
+    "p = s.getfile(\"file url\",\n",
     "              filename='Daily CAB Tracker.xlsx')"
    ]
   },
@@ -111,7 +109,7 @@
    "outputs": [],
    "source": [
     "#import data with the mails\n",
-    "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/Compass%20Names.xlsx\"\\\n",
+    "p = s.getfile(\"file url\"\\\n",
     "              , filename = 'Compass_mails.xlsx')\n",
     "compass_mails = pd.read_excel ('Compass_mails.xlsx')"
    ]
@@ -124,8 +122,8 @@
    "source": [
     "# SMTP Mail variables\n",
     "today = datetime.strftime(datetime.today(), '%m-%d-%Y')\n",
-    "myMail = 'testNub78@outlook.com'\n",
-    "password = 'EasyP4ssword78'\n",
+    "myMail = 'username'\n",
+    "password = 'password'\n",
     "subjectEmail = 'Compass error report'\n",
     "\n",
     "msg1 = \"\"\"<h3>Hola, %s</h3>\n",
@@ -853,7 +851,7 @@
     "            print(colm['Mail'])\n",
     "            #Temporal\n",
     "            if colm['Name'] == 'Miguel Mora' or colm['Name'] == 'Lina Hernández':\n",
-    "                send_msg('luisa.molano@nub78.com', myMail, subjectEmail , msg1 % 'Luisa', True)\n",
+    "                send_msg('email direction', myMail, subjectEmail , msg1 % 'Luisa', True)\n",
     "        else:\n",
     "            print('Not send to: '+colm['Mail'])"
    ]
@@ -874,8 +872,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "send_msg('maria.rojas@nub78.com', myMail, subjectEmail , msg1 % 'Maria Paula', True)\n",
-    "send_msg('jonnathan.neira@nub78.com', myMail, subjectEmail , msg1 % 'Jonathan Neira', True)"
+    "send_msg('test email', myMail, subjectEmail , msg1 % 'Maria Paula', True)\n",
+    "send_msg('main email', myMail, subjectEmail , msg1 % 'Jonathan Neira', True)"
    ]
   },
   {
@@ -906,11 +904,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "3d09c6c431078fb7f351a96db686af32fcd54162872b54b67a362c61661060f3"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -924,9 +919,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "7627003e78ead900aec203b185a978fc27a38ee0366c28a11b079a9dcc3d571a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
